[project]
name = "ocxwiki"
version = "1.0.0"
description = "A python package creating wiki documentation of the OCX"
readme = "README.md"
authors = [
    { name = "ocastrup", email = "ole.christian.astrup@dnv.com" }
]
requires-python = ">=3.11,<4.0"

# Runtime dependencies
dependencies = [
    "xsdata==23.8",
    "click-shell",
    "typer",
    "ocx==3.0.1",
    "ocx-schema-parser>=1.8.0",
    "spellchecker",
    "arrow",
    "dokuwiki",
    "loguru",
    "pyyaml",
    "python-dotenv",
    "pregex",
    "rich>=13.5.2",
    "textual>=7.5.0",
]

[project.optional-dependencies]
# Development and documentation extras
dev = [
    "pytest>=7.4.0",
    "sphinx",
    "sphinx-autodoc-typehints",
    "sphinx_rtd_theme",
    "sphinx-click",
    "tbump",
]

[project.scripts]
# Preserve the existing CLI entry point name
script = "cli:cli"

[project.urls]
"Homepage" = "https://github.com/OCXStandard/ocxwiki"
"Bug Tracker" = "https://github.com/OCXStandard/ocxwiki/issues"

[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[tool.tbump]
# Uncomment this if your project is hosted on GitHub:
github_url = "https://github.com/OCXStandard/ocxwiki"

[tool.tbump.version]
current = "1.0.0"

# Example of a semver regexp.
# Make sure this matches current_version before
# using tbump
regex = '''
  (?P<major>\d+)
  \
  (?P<minor>\d+)
  \
  (?P<patch>\d+)
  (\-
    (?P<extra>.+)
  )?
  '''

[[tool.tbump.field]]
# the name of the field
name = "extra"
# the default value to use, if there is no match
default = ""

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "v{new_version}"

# For each file to patch, add a [[tool.tbump.file]] config
# section containing the path of the file, relative to the
# tbump.toml location.

[[tool.tbump.file]]
src = "pyproject.toml"

[[tool.tbump.file]]
src = "./ocxwiki/__init__.py"

# You can specify a list of commands to
# run after the files have been patched
# and before the git commit is made


# Or run some commands after the git tag and the branch
# have been pushed:
#  [[tool.tbump.after_push]]
#  name = "publish"
#  cmd = "./publish.sh"
